--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -1,3 +1,6 @@
+SEASIDE_PRIVATE_KEY=LLFLPRfCNNCe21xZKIUvZuwB7iaN18/szKNrCAbBAaHGfN32cZlSog==
+SEASIDE_SERVER_KEY=c2VjcmV0IGVuY29kZWQgYmFzZTY0IHNlcnZlciBrZXk=
+
 # Caerulean owner payload, provides access to privileged authorization
 SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
 # Caerulean user payload, provides access to network authorization
