--- a/.github/scripts/package.json
+++ b/.github/scripts/package.json
@@ -7,8 +7,8 @@
 		"deploy-whirlpool-beget": "node deploy_whirlpool_beget.mjs",
 		"configure-viridian-test-setup": "node configure_viridian_test.mjs",
 		"configure-viridian-test-reset": "node configure_viridian_test.mjs -r",
-		"lint-scripts": "npx prettier . --check",
-		"format-scripts": "npx prettier . --write"
+		"lint-scripts": "npx prettier '../**/*.*js' --check",
+		"format-scripts": "npx prettier '../**/*.*js' --write"
 	},
 	"repository": {
 		"type": "git",
