--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -26,7 +26,7 @@ runs:
     - name: Install Node Dependencies 🔮
       working-directory: .github/scripts
       shell: bash
-      run: npm install
+      run: npm install > /dev/null 2>&1
 
     - name: Setup Python 3.11 🐍
       uses: actions/setup-python@v5
@@ -37,8 +37,8 @@ runs:
       working-directory: viridian/algae
       shell: bash
       run: |
-        pip3 install poetry poethepoet[poetry_plugin]
-        poetry install --extras "client devel"
+        pip3 install poetry poethepoet[poetry_plugin] > /dev/null 2>&1
+        poetry install --extras "client devel" > /dev/null 2>&1
 
     - name: Resolve Target
       id: resolve-target
