--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
     name: Test Viridian Algae Quick
     runs-on: ubuntu-latest
     env:
-      TEST_COMMAND: curl -sS -I --fail --max-time 15 https://1.1.1.1
+      TEST_COMMAND: sudo iptables -S # curl -sS -I --fail --max-time 15 https://1.1.1.1
 
     steps:
       - name: Checkout 🛎️
@@ -58,9 +58,7 @@ jobs:
         uses: ./.github/actions/setup-server
         with:
           target: 1.1.1.1
-          test-command: ${{ env.TEST_COMMAND }}
-
-      - run: sudo iptables -S
+  #        test-command: ${{ env.TEST_COMMAND }}
 
       - name: Test Viridian Algae PORT (standalone) 🧪
         id: test-viridian-algae-port
