suggested dns set

--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -6,6 +6,8 @@ SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
 # Caerulean user payload, provides access to network authorization
 SEASIDE_API_KEY_ADMIN=super_secret_admin_payload_data
 
+SEASIDE_SUGGESTED_DNS=0.0.0.0
+
 # Whirlpool net port
 SEASIDE_API_PORT=8587
 
