--- a/viridian/algae/docker/compose.standalone.yml
+++ b/viridian/algae/docker/compose.standalone.yml
@@ -9,6 +9,8 @@ services:
       target: default-certified
       args:
         SEASIDE_HOST_ADDRESS: ${SEASIDE_HOST_ADDRESS}
+    environment:
+      SEASIDE_HOST_ADDRESS: ${SEASIDE_HOST_ADDRESS}
 
   whirlpool-bridge:
     extends: whirlpool-base
