--- a/viridian/algae/docker/compose.standalone.yml
+++ b/viridian/algae/docker/compose.standalone.yml
@@ -8,9 +8,9 @@ services:
     build:
       target: default-certified
       args:
-        SEASIDE_HOST_ADDRESS: ${SEASIDE_HOST_ADDRESS}
+        SEASIDE_ADDRESS: ${SEASIDE_HOST_ADDRESS}
     environment:
-      SEASIDE_HOST_ADDRESS: ${SEASIDE_HOST_ADDRESS}
+      SEASIDE_ADDRESS: ${SEASIDE_HOST_ADDRESS}
 
   whirlpool-bridge:
     extends: whirlpool-base
