--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -44,6 +44,7 @@ COPY viridian/algae/tests/ ./tests/
 ENV SEASIDE_ADDRESS=
 ENV SEASIDE_API_KEY_OWNER=
 ENV SEASIDE_API_PORT=
+ENV SEASIDE_SUGGESTED_DNS=0.0.0.0
 ENV SEASIDE_TUNNEL_NAME=seatun
 
 ENV TEST_FILE=$RUNNING_TEST_FILE
@@ -52,7 +53,7 @@ ENV LOGGING_LEVEL=${RUNNING_IN_CI:+ERROR}
 ENV LOGGING_LEVEL=${RUNNING_IN_CI:-DEBUG}
 
 ENV TEST_COMMAND="python3 -m pytest --log-cli-level=$LOGGING_LEVEL tests/$TEST_FILE"
-ENV VPN_COMMAND="python3 -m sources.automation.simple_client -a \$SEASIDE_ADDRESS -k \$SEASIDE_API_KEY_OWNER -p \$SEASIDE_API_PORT -e \"\$TEST_COMMAND\""
+ENV VPN_COMMAND="python3 -m sources.automation.simple_client -a \$SEASIDE_ADDRESS -k \$SEASIDE_API_KEY_OWNER -p \$SEASIDE_API_PORT -d \$SEASIDE_SUGGESTED_DNS -e \"\$TEST_COMMAND\""
 
 # Just sleep - run nothing.
 ENTRYPOINT ["sh", "-c", "eval \"$VPN_COMMAND\""]
