--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -54,8 +54,9 @@ runs:
 
     - name: Resolve Target
       id: resolve-target
+      working-directory: ${{ github.action_path }}
       shell: bash
-      run: echo "target-ip=$(node ${{ github.action_path }}/resolve-target.js ${{ inputs.target }})" >> $GITHUB_OUTPUT
+      run: echo "target-ip=$(node resolve-target.js ${{ inputs.target }})" >> $GITHUB_OUTPUT
 
     - name: Start Background Server
       id: start-background-server
