--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -87,4 +87,13 @@ runs:
       if: ${{ inputs.test-command != '' }}
       working-directory: viridian/algae
       shell: bash
-      run: eval "${{ inputs.test-command }}" && exit 1 || true
+      env:
+        RUNNER: ${{ runner.os == 'Linux' && 'bash -c' || 'powershell -Command' }}
+      run: ${{ env.RUNNER }} "${{ inputs.test-command }}" && exit 1 || true
+
+    - name: Stop Background Server
+      working-directory: .github/scripts
+      shell: bash
+      env:
+        SUDO: ${{ runner.os == 'Linux' && 'sudo -E env "PATH=$PATH"' || '' }}
+      run: ${{ env.SUDO }} node configure_viridian_test.mjs -t ${{ steps.resolve-target.outputs.target-ip }} -r
