--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -67,7 +67,7 @@ runs:
       run: |  # echo "server-ip=$(${{ env.SUDO }} node configure_viridian_test.mjs -t ${{ steps.resolve-target.outputs.target-ip }} -s)" >> $GITHUB_OUTPUT
         ${{ env.SUDO }} node configure_viridian_test.mjs -t ${{ steps.resolve-target.outputs.target-ip }} || true
         wsl -u root journalctl -u docker
-        wsl -u root docker start whirlpool-host
+        wsl -u root docker start whirlpool-standalone
         echo "server-ip=aaa" >> $GITHUB_OUTPUT
 
     - name: Load .ENV File
