--- a/viridian/algae/docker/compose.standalone.yml
+++ b/viridian/algae/docker/compose.standalone.yml
@@ -22,11 +22,10 @@ services:
     extends: whirlpool-base
     network_mode: host
     healthcheck:
-      test: ["CMD", "netstat -tulpn | grep -q \":$SEASIDE_CTRLPORT\""]
+      test: ["CMD", "netstat -tulpn | grep -q \":$$SEASIDE_CTRLPORT\""]
       interval: 10s
       timeout: 1s
       retries: 3
-      start-period: 15s
 
 
 networks:
